# vaultsql

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  example_enrichment.yaml  pyproject.toml  requirements.txt
.claude/commands/: frontend.md  readme-sync.md
api/: main.py
api/routes/: chat.py  connections.py  feedback.py  query.py  usage.py
core/: anchor_extractor.py  claude_runner.py  complexity_router.py  enrichment.py  executor.py  feedback.py  generator.py  introspector.py  joinability.py  pathfinder.py  retriever.py  synthesizer.py  token_counter.py  visualizer.py
core/memory/: graph_extractor.py  graph_memory.py  memory_manager.py  mongo_memory.py  redis_memory.py
docs/: font-test.html  frontend-design.md
frontend/: index.html  package.json
frontend/src/: App.module.css  App.tsx
frontend/src/components/: ChartView.module.css  ChartView.tsx  Chat.module.css  Chat.tsx  DBConnector.module.css  DBConnector.tsx  MessageBubble.module.css  MessageBubble.tsx  ResultTable.module.css  ResultTable.tsx  SQLBlock.module.css  SQLBlock.tsx
frontend/src/components/layout/: Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
frontend/src/lib/: api.ts
frontend/src/store/: chat.ts  connection.ts
frontend/src/styles/: global.css  tokens.css
tests/: spider2_eval.py
