[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultsql"
version = "0.1.0"
description = "Open-source text-to-SQL assistant for small companies. Self-hosted, no cloud required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["text-to-sql", "natural-language", "database", "ai", "open-source"]

dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",      # PostgreSQL
    "pymysql>=1.1",               # MySQL
    "pyodbc>=5.0",                # MSSQL (also requires ODBC Driver 17/18 on OS)
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    # Vector retrieval (few-shot examples)
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # Memory
    "redis>=5.0",
    "pymongo>=4.8",
    "kuzu>=0.6",
    # Visualization
    "matplotlib>=3.9",
    "pandas>=2.2",
    # Config
    "pyyaml>=6.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",    # FastAPI test client
    "ruff>=0.6",
]

[project.scripts]
vaultsql = "cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
